--- a/themes/material-dark-smooth.css
+++ b/themes/material-dark-smooth.css
@@ -800,4 +800,5 @@ body {
 
 .frame-code-container .frame-code > pre {
   max-height: 430px !important;
+  overflow: hidden!important;
 }
