--- a/themes/material-dark.css
+++ b/themes/material-dark.css
@@ -677,4 +677,5 @@ body #hide-error {
 
 .frame-code-container .frame-code > pre {
   max-height: 430px !important;
+  overflow: hidden!important;
 }
